crates/oxc_linter/tests/snapshots/invalid_env_wrong_type.json_errors.snap
---
source: crates/oxc_linter/tests/schema_validation_test.rs
expression: snapshot_body
---
File: env_wrong_type.json

.oxlintrc.json:
{
  "env": "not-an-object"
}

Errors:
- "not-an-object" is not of type "object"
