crates/oxc_linter/tests/snapshots/invalid_globals_writeable_not_allowed.json_errors.snap
---
source: crates/oxc_linter/tests/schema_validation_test.rs
expression: error_messages
---
- "writeable" is not one of "readonly", "writable" or "off"
