crates/oxc_linter/tests/snapshots/invalid_globals_wrong_value.json_errors.snap
---
source: crates/oxc_linter/tests/schema_validation_test.rs
expression: error_messages
---
- "foobar" is not one of "readonly", "writable" or "off"
