crates/oxc_linter/tests/snapshots/invalid_invalid_category.json_errors.snap
---
source: crates/oxc_linter/tests/schema_validation_test.rs
expression: error_messages
---
- Additional properties are not allowed ('invalid' was unexpected)
