crates/oxc_linter/tests/snapshots/invalid_invalid_plugin.json_errors.snap
---
source: crates/oxc_linter/tests/schema_validation_test.rs
expression: snapshot_body
---
File: invalid_plugin.json

.oxlintrc.json:
{
  "plugins": [
    "invalid"
  ]
}

Errors:
- ["invalid"] is not valid under any of the schemas listed in the 'anyOf' keyword
