crates/oxc_linter/tests/snapshots/invalid_invalid_settings_react_version.json_errors.snap
---
source: crates/oxc_linter/tests/schema_validation_test.rs
expression: snapshot_body
---
File: invalid_settings_react_version.json

.oxlintrc.json:
{
  "$schema": "../../../../../../npm/oxlint/configuration_schema.json",
  "plugins": [
    "react"
  ],
  "settings": {
    "react": {
      "version": "5.10.9.1"
    }
  }
}

Errors:
- "5.10.9.1" does not match "^[1-9][0-9]*(\.(0|[1-9][0-9]*))?(\.(0|[1-9][0-9]*))?$"
