crates/oxc_linter/tests/snapshots/invalid_invalid_severity.json_errors.snap
---
source: crates/oxc_linter/tests/schema_validation_test.rs
expression: error_messages
---
- "invalid-severity" is not valid under any of the schemas listed in the 'oneOf' keyword
