crates/oxc_linter/tests/snapshots/invalid_plugins_wrong_type.json_errors.snap
---
source: crates/oxc_linter/tests/schema_validation_test.rs
expression: error_messages
---
- "not-an-array" is not valid under any of the schemas listed in the 'anyOf' keyword
